--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"react-dom": "^16.12.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.7.4",
+		"@babel/plugin-proposal-class-properties": "^7.7.4",
 		"gh-pages": "^2.1.1",
 		"parcel-bundler": "^1.12.4",
 		"sass": "^1.23.7"
